# codex-openai-proxy

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-deploy.yml  build-image.yml
docs/: ARCHITECTURE.md  INDEX.md  PLANS.md  RELIABILITY.md  SECURITY.md
src/: auth.rs  chat.rs  config.rs  images.rs  main.rs  models.rs  proxy.rs  usage.rs
