[package]
name = "codex-openai-proxy"
version = "0.2.0"
edition = "2021"
description = "Proxy that exposes an OpenAI-compatible API using a ChatGPT/Codex subscription"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
